<resources>
    <string name="app_name">Quiz</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Custom string-->
    <string name="start">START</string>
    <string name="settings">SETTINGS</string>
    <string name="highscore">HIGHSCORE</string>
    <string name="choose_category">Choose a category!</string>
    <string name="capitals">Capitals</string>
    <string name="flags">Flags</string>
    <string name="sights">Sights</string>
    <string name="neighbors">Neighbors</string>
    <string name="captial_question">What is the capital of </string>
    <string name="api_key_geo">890e137fdd401da77cf796b9a167aa15</string>
    <string name="news">News</string>
    <string name="news_url">http://api.mediastack.com/v1/news</string>
    <string name="api_key_news">377314c73b9f9768f67aa64b6e80fe9a</string>
    <string name="limit_news">10</string>
    <string name="flags_question">Guess the flag</string>
    <string name="next">NEXT</string>
    <string name="info">INFO</string>
    <string name="neighbors_question">What are neighbouring countries of</string>
    <string name="sight_question">Where is this sight from?</string>
    <string name="sight_content_desc">Sight</string>
    <string name="broj_pitanja_text">Chose number of questions per category.</string>
    <string name="username_prompt">Enter your username</string>
    <string name="finish">FINISH</string>
    <string name="jezik_aplikacije">Choose preferred language</string>
    <string name="save">SAVE</string>
    <string name="facebook_client_token" translatable="false">9f55b7762feec88f6754faf37ae1af27</string>
    <string name="facebook_app_id" translatable="false">457837392658392</string>
</resources>