<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlagsActivity">

    <ImageView
        android:id="@+id/flag_img"
        android:layout_width="232dp"
        android:layout_height="132dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/flags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/flag_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/flags_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flag_img"
        android:layout_marginBottom="10dp"/>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/flag_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="4"
        app:layout_constraintBottom_toTopOf="@+id/answer_grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flag_question"
        app:layout_constraintVertical_bias="0.316" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/answer_grid"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="48dp"
        app:columnCount="4"
        app:layout_constraintBottom_toTopOf="@+id/flags_next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.gridlayout.widget.GridLayout>

    <ImageButton
        android:id="@+id/flags_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_next" />


</androidx.constraintlayout.widget.ConstraintLayout>